# actions-guard

./: .actionsguard.example.json  .actionsguard.example.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github-action/: Dockerfile  action.yml  entrypoint.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-merge-claude.yml  ci.yml  codeql.yml  release.yml  security-scan.yml
actionsguard/: __init__.py  __version__.py  cache.py  cli.py  github_client.py  inventory.py  models.py  scanner.py  scorecard_runner.py  workflow_analyzer.py
actionsguard/checks/: __init__.py
actionsguard/reporters/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
actionsguard/templates/: report.html  report_enhanced.html
actionsguard/utils/: __init__.py  config.py  logging.py
docs/: IMPORT_MODE.md  INVENTORY_TRACKING.md  TOKEN_GUIDE.md  TROUBLESHOOTING_TOKEN.md  json_schema.md  report_formats.md
examples/: basic-scan.yml  org-scan.yml
scripts/: install.sh
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_github_client.py  test_models.py  test_reporters.py  test_scanner.py  test_scorecard_runner.py  test_workflow_analyzer.py
tests/fixtures/: sample_workflow.yml
